--- a/HTML/agradecimientos.html
+++ b/HTML/agradecimientos.html
@@ -201,7 +201,7 @@
                                 <h3>Agradecimientos <br>por colaboración</h3>
                                 <hr>
                                 <p>
-                                    Joaquín <br>
+                                    Joaquíncito <br>
                                     Luis Diego Martinez Ramirez
                                 </p>
                             </div>
