--- a/HTML/galeria.html
+++ b/HTML/galeria.html
@@ -183,14 +183,14 @@
             <!--Foto10-->
             <div class="col-12 col-md-6 d-flex justify-content-center">
                 <div class="cont-foto">
-                    <img src="../IMG/Galeria/Caballito.webp" class="foto">
+                    <img src="../IMG/Galeria/Cangrejo.webp" class="foto">
                     <div class="hover-foto text-center font-esp">
                         <div class="div-texto">
-                            <h2 style="font-size: 3.25vmin;">Escultura de bulto zoomorfa (Caballito de Mar)                            </h2>
+                            <h2 style="font-size: 3.25vmin;">Colgante zoomorfo (Cangrejo)</h2>
                             <hr>
-                            <p>Número de pieza: 21453</p>
+                            <p>Número de pieza: 31826</p>
                             <p>Encontrada en la Región Arqueológica: Pacífico Sur - Subregión Diquís</p>
-                            <p>Posee una base de espiga, además de unas aletas que rodean su prominente abdomen.</p>
+                            <p>Colgante con forma de cangrejo, del cual destacan sus tenazas y sus patas. Data del período del 700 al 1550 d.C.</p>
                         </div>
                     </div>
                 </div>
