--- a/HTML/agradecimientos.html
+++ b/HTML/agradecimientos.html
@@ -109,19 +109,19 @@
                             <div class="col-6 col-md-4">
                                 <div class="img-cont">
                                     <img class="img-pfp " src="../IMG/Creditos/luisdi.webp" alt=" "draggable="false">
-                                    <h3 class="px-2" style="font-size: 2.6vmin;">Pirulo</h3>
+                                    <h3 class="px-2" style="font-size: 2.6vmin;">Oscar Bolaños Morales</h3>
                                 </div>
                             </div>
                             <div class="col-6 col-md-4">
                                 <div class="img-cont">
                                     <img class="img-pfp " src="../IMG/Creditos/luisdi.webp" alt=" "draggable="false">
-                                    <h3 class="px-2" style="font-size: 2.6vmin;">Pirulo</h3>
+                                    <h3 class="px-2" style="font-size: 2.6vmin;">Melania Pérez Mata</h3>
                                 </div>
                             </div>
                             <div class="col-6 offset-3 offset-md-0 col-md-4">
                                 <div class="img-cont">
                                     <img class="img-pfp " src="../IMG/Creditos/luisdi.webp" alt=" "draggable="false">
-                                    <h3 class="px-2" style="font-size: 2.6vmin;">Pirulo</h3>
+                                    <h3 class="px-2" style="font-size: 2.6vmin;">Margarita Mata Quesada</h3>
                                 </div>
                             </div>
                         </div>
@@ -144,8 +144,8 @@
                                 <h3>Cuento</h3>
                                 <hr>
                                 <p>
-                                    Jose Ignacio Locutor <br>
-                                    Jose Ignacio Locutor
+                                    José Ignacio Fernández Vargas <br>
+                                    Margarita Mata Quesada
                                 </p>
                             </div>
                             <div class="col-6 text-center mb-5">
@@ -202,7 +202,7 @@
                                 <hr>
                                 <p>
                                     Joaquíncito <br>
-                                    Luis Diego Martinez Ramirez
+                                    Luis Diego Martinez Ramirez <br>
                                 </p>
                             </div>
                         </div>
