--- a/index.html
+++ b/index.html
@@ -97,25 +97,58 @@
     </div>
     <div class="container-fluid">
         <!--Footer-->
-        <div class="row text-center color-arena footer">
-            <div class="col-12">
-                <img src="IMG/Recursos/logo-cafe-1.svg" style="height: 15vmin; margin-top: 5vmin;margin-bottom: 10vmin;" class="img-fluid ">
-            </div>
-            <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3" style="margin-bottom: 10vmin;">
-                <div class="row ">
-                    <div class="col-4 p-4 d-flex align-content-center">
-                        <img src="IMG/Recursos/LogoCR22-26.svg" class="img-fluid ">
+        <div class="row text-center color-arena footer font-blanco" style="padding-top: 5vmin;">
+            <!--Logos-->
+            <div class="col-12 col-md-4">
+                <div class="row"style="padding-top: 2vmin;">
+                    <div class="col-4" >
+                        <img src="IMG/Recursos/LogoCyJ.svg" alt="" style="width: 100%; height: auto;">
                     </div>
-                    <div class="col-4 p-4 d-flex align-content-center">
-                        <img src="IMG/Recursos/LogoCulturaCrecer.svg" class="img-fluid ">
+                    <div class="col-4">
+                        <img src="IMG/Recursos/logoMuseo.webp" alt="" style="width: 100%; height: auto;">
                     </div>
-                    <div class="col-4 p-4 d-flex align-content-center">
-                        <img src="IMG/Recursos/LogoCyJ.svg" class="img-fluid ">
+                    <div class="col-4">
+                        <img src="IMG/Recursos/LogoCR22-26.svg" alt="" style="width: auto; height: auto;">
+                    </div>
+                    <div class="col-6">
+                        <img src="IMG/Recursos/Logo_Diseno.svg" alt="" style="width: 100%; height: auto;">
+                    </div>
+                    <div class="col-6">
+                        <img src="IMG/Recursos/Logo_Diseno.svg" alt="" style="width: 100%; height: auto;">
                     </div>
                 </div>
+                <div class="row">
+
+                </div>
             </div>
-            <div class="col-6"></div>
-            <div class="col-12">
+
+            <!--Horarios-->
+            <div class="col-4" style="text-align: left;">
+                <p>
+                    <b>HORARIOS</b>
+                    De Martes a Sábado <br>
+                    De 8:30 a.m. a 4:30 p.m.
+                </p>
+                <p>
+                    Domingo
+                    De 9:00 a.m. a 4:30 p.m.
+                    <br><br>
+                    Lunes cerrado
+                </p>
+
+            </div>
+
+            <!--Contactenos-->
+            <div class="col-4">
+                <p style="text-align: left;">
+                    <b>Contáctenos</b> <br>
+                    Tel.: +506 2211 5700 <br>
+                    Apdo.: 749-1000 San José, Costa Rica
+                </p>
+            </div>
+
+            <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3" style="margin-bottom: 10vmin;">
+                
                 <p>Museo Nacional de Costa Rica</p>
             </div>
         </div>
