--- a/HTML/agradecimientos.html
+++ b/HTML/agradecimientos.html
@@ -89,12 +89,14 @@
                                 <div class="img-cont">
                                     <img class="img-pfp " src="../IMG/Creditos/yared.webp" alt=" "draggable="false">
                                     <h3 class="px-2" style="font-size: 2.6vmin;">Yared Guido Fallas</h3>
+                                    <h3 class="px-2" style="font-size: 2vmin;">(Colegio Vocacional de Artes y Oficios)</h3>
                                 </div>
                             </div>
                             <div class="col-6  col-md-4">
                                 <div class="img-cont">
                                     <img class="img-pfp " src="../IMG/Creditos/sebas.webp" alt=" "draggable="false">
                                     <h3 class="px-2" style="font-size: 2.6vmin;">Sebastian Morales Fonseca</h3>
+                                    <h3 class="px-2" style="font-size: 2vmin;">(Colegio Vocacional de Artes y Oficios)</h3>
                                 </div>
                             </div>
 
@@ -104,7 +106,7 @@
                     <div class="col-12"style="height: 65vmin;">
                         <div class="row">
                             
-                            <!--Colaboradores-->
+                            <!--Logística-->
                             <div class="col-12 text-center mb-4"><h2>Logística</h2></div>
                             <div class="col-6 col-md-4">
                                 <div class="img-cont">
@@ -131,7 +133,7 @@
                         <div class="row">
                             
                             <!--Colaboradores-->
-                            <div class="col-6 text-center mb-5">
+                            <div class="col-6 col-md-5 text-center mb-5">
                                 <h3>Ilustraciones</h3>
                                 <hr>
                                 <p>
@@ -140,7 +142,8 @@
                                     Silvana Monge Hernández 
                                 </p>
                             </div>
-                            <div class="col-6 text-center mb-5">
+                            <div class="col-2 d-none d-md-block"></div>
+                            <div class="col-6 col-md-5 text-center mb-5">
                                 <h3>Cuento</h3>
                                 <hr>
                                 <p>
@@ -148,7 +151,9 @@
                                     Margarita Mata Quesada
                                 </p>
                             </div>
-                            <div class="col-6 text-center mb-5">
+
+
+                            <div class="col-6 col-md-5 text-center mb-5">
                                 <h3>Audiolibro</h3>
                                 <hr>
                                 <p>
@@ -156,7 +161,8 @@
                                     Jose Ignacio Locutor
                                 </p>
                             </div>
-                            <div class="col-6 text-center mb-5">
+                            <div class="col-2 d-none d-md-block"></div>
+                            <div class="col-6 col-md-5 text-center mb-5">
                                 <h3>Música</h3>
                                 <hr>
                                 <p>
@@ -164,7 +170,10 @@
                                     Jose Ignacio Locutor
                                 </p>
                             </div>
-                            <div class="col-6 text-center mb-5">
+
+
+
+                            <div class="col-6 col-md-5 text-center mb-5">
                                 <h3>Página Web</h3>
                                 <hr>
                                 <h5>Página y Lector</h5>
@@ -172,14 +181,18 @@
                                 <h5>Minijuegos</h5>
                                 <p>Sebastian Morales Fonseca</p>
                             </div>
-                            <div class="col-6 text-center mb-5">
+                            <div class="col-2 d-none d-md-block"></div>
+                            <div class="col-6 col-md-5 text-center mb-5">
                                 <h3>Minijuegos</h3>
                                 <hr>
                                 <p>
                                     Sebastian Morales Fonseca
                                 </p>
                             </div>
-                            <div class="col-6 text-center mb-5">
+
+
+
+                            <div class="col-6 col-md-5 text-center mb-5">
                                 <h3>Audiolibro</h3>
                                 <hr>
                                 <p>
@@ -187,14 +200,15 @@
                                     Jose Ignacio Locutor
                                 </p>
                             </div>
-                            <div class="col-6 text-center mb-5">
-                                <h3>Música</h3>
+                            <div class="col-2 d-none d-md-block"></div>
+                            <div class="col-6 col-md-5 text-center mb-5">
+                                <h3>Música y Mezcla</h3>
                                 <hr>
                                 <p>
-                                    Jose Ignacio Locutor <br>
-                                    Jose Ignacio Locutor
+                                    Yared Guido Fallas
                                 </p>
                             </div>
+
 
 
                             <div class="col-6 offset-3 text-center mb-5">
