--- a/HTML/galeria.html
+++ b/HTML/galeria.html
@@ -218,7 +218,7 @@
                 document.getElementById("tostada").style.right="-40vh";
                 setTimeout(function()
                     {
-                        document.getElementById("tostada").style.right="-40vh";
+                        document.getElementById("cont-tostada").style.display= "none";
                     },
                     400
                 );
