--- a/HTML/galeria.html
+++ b/HTML/galeria.html
@@ -14,10 +14,10 @@
 
     <div class="container-fluid">
         <!--Header-->
-        <div class="row header">
+        <div class="row header" style="height: 10vh !important;">
             <div class="col-8 offset-2">
                 <a href="https://www.museocostarica.go.cr/" class="nav-link d-inline-block">
-                    <img src="../IMG/Recursos/logo-cafe-1.svg"  style="height:8vmin; margin-top: 1vmin;" draggable="false">
+                    <img src="../IMG/Recursos/logo-cafe-1.svg" style="height:8vmin; margin-top: 1vmin;" draggable="false">
                 </a>
                 <a href="../index.html" class="nav-link d-inline-block float-end">
                     <img src="../IMG/Recursos/Logo.svg"  style="height:8vmin; margin-top: 1vmin;" draggable="false" >
@@ -195,6 +195,34 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                <!--Footer-->
+                <div class="row text-center color-arena footer font-secundario" style="padding-top: 5vmin;">
+                        
+                    <!--Logos-->
+                    <div class="col-2" style="display: grid;">
+                        <img draggable="false" src="../IMG/Recursos/LogoCyJ.svg" alt="" style="width: auto; height: 10vmin; align-self: center; justify-self: center;">
+                    </div>  
+                    <div class="col-2" style="display: grid;">
+                        <img draggable="false" src="../IMG/Recursos/LogoMNCR.svg" alt="" style="width: auto; height: 10vmin; align-self: center; justify-self: center;">
+                    </div>
+                    <div class="col-2" style="display: grid;">
+                        <img draggable="false" src="../IMG/Recursos/LogoCulturaCrecer.svg" alt="" style="width: 100%; height: auto; align-self: center; justify-self: center;">
+                    </div>
+                    <div class="col-2" style="display: grid;">
+                        <img draggable="false" src="../IMG/Recursos/LogoCR22-26.svg" alt="" style="width: auto; height: 10vmin; align-self: center; justify-self: center;">
+                    </div>
+                    <div class="col-2" style="display: grid;">
+                        <img draggable="false" src="../IMG/Recursos/LogoExpotec.svg" alt="" style="width: auto; height: 10vmin; align-self: center; justify-self: center;">
+                    </div>
+                    <div class="col-2" style="display: grid;">
+                        <img draggable="false" src="../IMG/Recursos/Logo_Diseno.svg" alt="" style="width: 100%; height: 10vmin; align-self: center; justify-self: center;">
+                    </div>
+                    <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3" style="margin-bottom: 1vmin;margin-top: 2vmin;">
+                        <p>Museo Nacional de Costa Rica</p>
                     </div>
                 </div>
             </div>
