--- a/index.html
+++ b/index.html
@@ -97,58 +97,28 @@
     </div>
     <div class="container-fluid">
         <!--Footer-->
-        <div class="row text-center color-arena footer font-blanco" style="padding-top: 5vmin;">
+        <div class="row text-center color-arena footer font-secundario" style="padding-top: 5vmin;">
+            
             <!--Logos-->
-            <div class="col-12 col-md-4">
-                <div class="row"style="padding-top: 2vmin;">
-                    <div class="col-4" >
-                        <img src="IMG/Recursos/LogoCyJ.svg" alt="" style="width: 100%; height: auto;">
-                    </div>
-                    <div class="col-4">
-                        <img src="IMG/Recursos/logoMuseo.webp" alt="" style="width: 100%; height: auto;">
-                    </div>
-                    <div class="col-4">
-                        <img src="IMG/Recursos/LogoCR22-26.svg" alt="" style="width: auto; height: auto;">
-                    </div>
-                    <div class="col-6">
-                        <img src="IMG/Recursos/Logo_Diseno.svg" alt="" style="width: 100%; height: auto;">
-                    </div>
-                    <div class="col-6">
-                        <img src="IMG/Recursos/Logo_Diseno.svg" alt="" style="width: 100%; height: auto;">
-                    </div>
-                </div>
-                <div class="row">
-
-                </div>
+            <div class="col-2" style="display: grid;">
+                <img draggable="false" src="IMG/Recursos/LogoCyJ.svg" alt="" style="width: auto; height: 10vmin; align-self: center; justify-self: center;">
+            </div>  
+            <div class="col-2" style="display: grid;">
+                <img draggable="false" src="IMG/Recursos/LogoMNCR.svg" alt="" style="width: auto; height: 10vmin; align-self: center; justify-self: center;">
             </div>
-
-            <!--Horarios-->
-            <div class="col-4" style="text-align: left;">
-                <p>
-                    <b>HORARIOS</b>
-                    De Martes a Sábado <br>
-                    De 8:30 a.m. a 4:30 p.m.
-                </p>
-                <p>
-                    Domingo
-                    De 9:00 a.m. a 4:30 p.m.
-                    <br><br>
-                    Lunes cerrado
-                </p>
-
+            <div class="col-2" style="display: grid;">
+                <img draggable="false" src="IMG/Recursos/LogoCulturaCrecer.svg" alt="" style="width: 100%; height: auto; align-self: center; justify-self: center;">
             </div>
-
-            <!--Contactenos-->
-            <div class="col-4">
-                <p style="text-align: left;">
-                    <b>Contáctenos</b> <br>
-                    Tel.: +506 2211 5700 <br>
-                    Apdo.: 749-1000 San José, Costa Rica
-                </p>
+            <div class="col-2" style="display: grid;">
+                <img draggable="false" src="IMG/Recursos/LogoCR22-26.svg" alt="" style="width: auto; height: 10vmin; align-self: center; justify-self: center;">
             </div>
-
-            <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3" style="margin-bottom: 10vmin;">
-                
+            <div class="col-2" style="display: grid;">
+                <img draggable="false" src="IMG/Recursos/LogoExpotec.svg" alt="" style="width: auto; height: 10vmin; align-self: center; justify-self: center;">
+            </div>
+            <div class="col-2" style="display: grid;">
+                <img draggable="false" src="IMG/Recursos/Logo_Diseno.svg" alt="" style="width: 100%; height: 10vmin; align-self: center; justify-self: center;">
+            </div>
+            <div class="col-12 col-sm-8 offset-sm-2 col-md-6 offset-md-3" style="margin-bottom: 1vmin;margin-top: 2vmin;">
                 <p>Museo Nacional de Costa Rica</p>
             </div>
         </div>
