--- a/HTML/minijuegos/memoria/index.html
+++ b/HTML/minijuegos/memoria/index.html
@@ -10,9 +10,11 @@
     <link rel="shortcut icon" href="../../../IMG/Recursos/museo-favicon-32x32.webp" type="image/x-icon">
     <title>Juego de memoria</title>
 </head>
-<body onload="handleLoad()" >
-    <img src="imgs/FondoPresentacion.webp" class="fondo-container">
-    <div class="container-fluid ">
+<body onload="handleLoad()" style="height: 100vh;width: 100vw;overflow: hidden;">
+    <div style="height: 100%;width: 100%;position: absolute;top: 0%;overflow: hidden;margin: 0%;">
+        <img src="imgs/FondoPresentacion.webp" class="fondo-container">
+    </div>
+    <div class="container-fluid "style="padding: 0 !important; overflow: hidden;">
         <!--Header-->
         <div class="row header">
             <div class="col-8 offset-2">
@@ -25,7 +27,7 @@
             </div>
         </div>
         <div class="containerMain " >
-            <div id="table" class="row align-content-center" style="width: 100vw; height: 100%;">
+            <div id="table" class="row align-content-center" style="width: 100vw; height: 100%;margin: 0% !important;">
 
             </div>
         </div>
