--- a/HTML/agradecimientos.html
+++ b/HTML/agradecimientos.html
@@ -56,7 +56,7 @@
                             <div class="col-12 text-center mb-5" ><h2>Equipo de ExpoTec</h2></div>
                             <div class="col-6 col-md-3 ">
                                 <div class="img-cont">
-                                    <img class="img-pfp " src="../IMG/Creditos/nacho.webp" alt="" draggable="false">
+                                    <img class="img-pfp " src="../IMG/Creditos/placeholder.webp" alt="" draggable="false">
                                     <h3 class="px-2" style="font-size: 2.6vmin;">Sebastián Angulo Quesada</h3>
                                 </div>
                             </div>
@@ -68,13 +68,13 @@
                             </div>
                             <div class="col-6 col-md-3 ">
                                 <div class="img-cont">
-                                    <img class="img-pfp " src="../IMG/Creditos/nacho.webp" alt="" draggable="false">
+                                    <img class="img-pfp " src="../IMG/Creditos/placeholder.webp" alt="" draggable="false">
                                     <h3 class="px-2" style="font-size: 2.6vmin;">Silvana Monge Hernández</h3>
                                 </div>
                             </div>
                             <div class="col-6 col-md-3 ">
                                 <div class="img-cont">
-                                    <img class="img-pfp " src="../IMG/Creditos/nacho.webp" alt="" draggable="false">
+                                    <img class="img-pfp " src="../IMG/Creditos/mariaPaula.webp" alt="" draggable="false">
                                     <h3 class="px-2" style="font-size: 2.6vmin;">Maria Paula Jacobo Méndez</h3>
                                 </div>
                             </div>
@@ -117,13 +117,13 @@
                             </div>
                             <div class="col-6 col-md-4">
                                 <div class="img-cont">
-                                    <img class="img-pfp " src="../IMG/Creditos/luisdi.webp" alt=" "draggable="false">
+                                    <img class="img-pfp " src="../IMG/Creditos/placeholder.webp" alt=" "draggable="false">
                                     <h3 class="px-2" style="font-size: 2.6vmin;">Melania Pérez Mata</h3>
                                 </div>
                             </div>
                             <div class="col-6 offset-3 offset-md-0 col-md-4">
                                 <div class="img-cont">
-                                    <img class="img-pfp " src="../IMG/Creditos/luisdi.webp" alt=" "draggable="false">
+                                    <img class="img-pfp " src="../IMG/Creditos/placeholder.webp" alt=" "draggable="false">
                                     <h3 class="px-2" style="font-size: 2.6vmin;">Margarita Mata Quesada</h3>
                                 </div>
                             </div>
@@ -149,7 +149,8 @@
                                 <hr>
                                 <p>
                                     José Ignacio Fernández Vargas <br>
-                                    Margarita Mata Quesada
+                                    Margarita Mata Quesada<br>
+                                    
                                 </p>
                             </div>
 
@@ -158,28 +159,29 @@
                                 <h3>Audiolibro</h3>
                                 <hr>
                                 <p>
-                                    Jose Ignacio Locutor <br>
-                                    Jose Ignacio Locutor
+                                    Margarita Mata Quesada <br>
+                                    José Ignacio Fernández Vargas
                                 </p>
                             </div>
                             <div class="col-2 d-none d-md-block"></div>
                             <div class="col-6 col-md-5 text-center mb-5">
-                                <h3>Música</h3>
+                                <h3>Traducciones</h3>
                                 <hr>
                                 <p>
-                                    Jose Ignacio Locutor <br>
-                                    Jose Ignacio Locutor
+                                    Nathalia Ugarte Jiménez <br>
+                                    José Ignacio Fernández Vargas
                                 </p>
-                            </div> 
-
+                            </div>
 
 
                             <div class="col-6 col-md-5 text-center mb-5">
-                                <h3>Audiolibro</h3>
+                                <h3>Página Web</h3>
                                 <hr>
                                 <p>
-                                    Jose Ignacio Locutor <br>
-                                    Jose Ignacio Locutor
+                                    <h5 style="text-align: left;margin-left: 5vmin;">Página:</h5>
+                                    Yared Guido Fallas
+                                    <h5 style="text-align: left;margin-left: 5vmin;">Minijuegos:</h5>
+                                    Sebastian Morales Fonseca
                                 </p>
                             </div>
                             <div class="col-2 d-none d-md-block"></div>
@@ -191,13 +193,11 @@
                                 </p>
                             </div>
 
-
-
                             <div class="col-6 offset-3 text-center mb-5">
                                 <h3>Agradecimientos <br>por colaboración</h3>
                                 <hr>
                                 <p>
-                                    Joaquíncito <br>
+                                    Joaquín Pappa Larreal <br>
                                     Luis Diego Martinez Ramirez <br>
                                 </p>
                             </div>
