--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <!--Opciones-->
                     <div class="offset-0  col-12 col-md-7 offset-md-0 col-md-7 d-flex align-items-center justify-content-center container-opc" style="height:80vmin; position: absolute; left: 0%;">
 
-                        <img src="IMG/Recursos/Murice.png" class="animalitos d-none d-md-block transition" style="margin-left: 130vmin;">
+                        <img src="IMG/Recursos/Murice.webp" class="animalitos d-none d-md-block transition" style="margin-left: 130vmin;">
                         <div class="row align-self-center " style="width: 100%;">
                             <div class="d-grid">
                                 <span class="text-end rounded-4 my-1 py-2 opcion opcion-func d-flex align-items-center opc-cont-sm opc-cont-md">
