--- a/HTML/minijuegos/diferencias/index.html
+++ b/HTML/minijuegos/diferencias/index.html
@@ -2,22 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../../../CSS/master.css">
     <link rel="stylesheet" href="../modal.css">
     <link rel="shortcut icon" href="../../../IMG/Recursos/museo-favicon-32x32.webp" type="image/x-icon">
-    <title>Juego de memoria</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <title>Encuentra las diferencias</title>
 </head>
-<body onload="handleLoad()" style="height: 100vh;width: 100vw;overflow: hidden;">
-    <div style="height: 100%;width: 100%;position: absolute;top: 0%;overflow: hidden;margin: 0%;">
+<body onload="cargarJuego((Math.floor(Math.random() * 3)+1))">
+    <div style="height: 100%;width: 100%;position: absolute;top: 0%;overflow: hidden;margin: 0%;z-index: -10;">
         <img src="../FondoPresentacion.webp" class="fondo-container">
     </div>
-    <div class="container-fluid "style="padding: 0 !important; overflow: hidden;">
+    <div class="container-fluid">
         <!--Header-->
-        <div class="row header">
+        <div class="row header" >
             <div class="col-8 offset-2">
                 <a href="https://www.museocostarica.go.cr/" class="nav-link d-inline-block">
                     <img src="../../../IMG/Recursos/logo-cafe-1.svg"  style="height:8vmin; margin-top: 1vmin;" draggable="false">
@@ -27,13 +26,10 @@
                 </a>
             </div>
         </div>
-        <div class="containerMain " >
-            <div id="table" class="row align-content-center" style="width: 100vw; height: 100%;margin: 0% !important;">
-
-            </div>
-        </div>
     </div>
-
+    <div class="flex" id="containerGame">
+        <div id="cantidadDiferencias"></div>
+    </div>
     <!--Modal-->
     <div class="modal-fondo" id="ModalWin">
         <div class="modal-cuerpo ">
@@ -57,8 +53,7 @@
             
         </div>
     </div>
-    
 </body>
 <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-<script async src="script.js"></script>
+<script src="js.js"></script>
 </html>
