--- a/HTML/minijuegos.html
+++ b/HTML/minijuegos.html
@@ -113,19 +113,19 @@
     .cont-preview:hover .letra3
     {
         top: -14vmin;
-        left: 40%;
-        transform: rotate(25deg);
+        left: 46%;
+        transform: rotate(15deg);
     }
     .cont-preview:hover .letra4
     {
-        top: -2vmin;
-        left: 100%;
-        transform: rotate(6deg);
+        top: 2vmin;
+        left: 110%;
+        transform: rotate(10deg);
     }
     .cont-preview:hover .letra5
     {
         top: 20vmin;
-        left: -3vmin;
+        left: -5vmin;
         transform: rotate(10deg);
     }
     .cont-preview:hover .letra6
@@ -174,7 +174,7 @@
 
             <!--Sopa de letras-->
             <div class="col-6 offset-3 col-md-4 offset-md-0 d-grid" style="margin-bottom: 15vmin ;">
-                <div class="cont-preview cont-preview-sm cont-preview-md"onclick="Redireccionar('minijuegos/memoria/')">
+                <div class="cont-preview cont-preview-sm cont-preview-md"onclick="Redireccionar('minijuegos/sopaLetras/')">
                     <p class="cartas letra3">M</p>
                     <p class="cartas letra2">U</p>
                     <p class="cartas letra1">R</p>
