--- a/HTML/minijuegos/sopaLetras/index.html
+++ b/HTML/minijuegos/sopaLetras/index.html
@@ -5,17 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>Prueba</title>
 </head>
 <body onload="handleLoad()" onmousedown="handleMouseDown()" onmouseup="handleMouseUp()">
+
     <div class="sopaContainer">
-        <table id="sopaLetras">
-        </table>
-        <div id="palabras">
-            <div id="palabrasL">
-            </div>
-            <div id="palabrasR">
+        <div>
+            <table id="sopaLetras">
+            </table>
+            <div id="palabras">
+                <div id="palabrasL">
+                </div>
+                <div id="palabrasR">
+                </div>
             </div>
         </div>
     </div>
